--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-12">
-          <div id="app"></div>
+          <button onclick="app.vendorsController.addMoney()">Add Money</button>
+          <h1 id="money">0</h1>
         </div>
+      </div>
+      <div class="row" id="snacks">
+
       </div>
     </div>
   </main>
